--- a/mrp/DESCRIPTION
+++ b/mrp/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mrp
-Version: 0.81-6
-Date: 2012-02-10
+Version: 0.82
+Date: 2012-12-21
 Title: Multilevel Regression and Poststratification
 Author:
   Andrew Gelman <gelman@stat.columbia.edu>,
@@ -9,7 +9,7 @@ Author:
   Yu-Sung Su <ys463@columbia.edu>,
   Wei Wang <ww2243@columbia.edu>
 Maintainer: Michael Malecki <malecki@gmail.com>, Daniel Lee <bearlee@alum.mit.edu>
-Depends: R (>= 2.14), methods, Matrix, blme, arm, sp, lattice, plyr, reshape2, mrpdata, doParallel
+Depends: R (>= 2.14), methods, Matrix, blme, arm, sp, lattice, plyr, reshape2, mrpdata
 Description: Multilevel Regressions and Poststratification
 License: GPL (>= 2)
 Collate: 'load.first.R' 'classNWayData.R' 'classMrp.R' 'spplot.R' 'xvalMethod.R'
