--- a/mrp/DESCRIPTION
+++ b/mrp/DESCRIPTION
@@ -2,15 +2,34 @@ Package: mrp
 Version: 0.82
 Date: 2012-12-21
 Title: Multilevel Regression and Poststratification
-Author:
-  Andrew Gelman <gelman@stat.columbia.edu>,
-  Michael Malecki <malecki@wustl.edu>,
-  Daniel Lee <bearlee@alum.mit.edu>,
-  Yu-Sung Su <ys463@columbia.edu>,
-  Wei Wang <ww2243@columbia.edu>
-Maintainer: Michael Malecki <malecki@gmail.com>, Daniel Lee <bearlee@alum.mit.edu>
-Depends: R (>= 2.14), methods, Matrix, blme, arm, sp, lattice, plyr, reshape2, mrpdata
+Author: Andrew Gelman <gelman@stat.columbia.edu>,
+    Michael Malecki <malecki@wustl.edu>,
+    Daniel Lee <bearlee@alum.mit.edu>,
+    Yu-Sung Su <ys463@columbia.edu>,
+    Wei Wang <ww2243@columbia.edu>
+Maintainer: Michael Malecki <malecki@gmail.com>, Daniel Lee
+    <bearlee@alum.mit.edu>
+Depends:
+    R (>= 2.14),
+    methods,
+    Matrix,
+    blme,
+    arm,
+    sp,
+    lattice,
+    plyr,
+    reshape2,
+    mrpdata
 Description: Multilevel Regressions and Poststratification
 License: GPL (>= 2)
 LazyLoad: yes
 LazyData: yes
+Collate:
+    'classMrp.R'
+    'classNWayData.R'
+    'load.first.R'
+    'mr.R'
+    'poststratify.R'
+    'shift.R'
+    'spplot.R'
+    'xvalMethod.R'
