--- a/mrp/DESCRIPTION
+++ b/mrp/DESCRIPTION
@@ -1,13 +1,12 @@
 Package: mrp
-Version: 0.96
-Date: 2012-12-31
+Version: 0.99
+Date: 2012-01-28
 Title: Multilevel Regression and Poststratification
 Author: Andrew Gelman <gelman@stat.columbia.edu>,
     Michael Malecki <malecki@wustl.edu>,
     Jeffrey R. Lax <JRL2124@columbia.edu>
     Wei Wang <ww2243@columbia.edu>
-Maintainer: Michael Malecki <malecki@gmail.com>, Daniel Lee
-    <bearlee@alum.mit.edu>
+Maintainer: Michael Malecki <malecki@gmail.com>
 Depends:
     R (>= 2.14),
     methods,
