roxygenise the doc and fix up the namespace

--- a/mrp/NAMESPACE
+++ b/mrp/NAMESPACE
@@ -1,4 +1,21 @@
-export(serialPaste)
-exportPattern(".")
+export(is.NWayData)
+export(mrp)
+export(mrp.theme)
+exportMethods(getData)
+exportMethods(getEstimates)
+exportMethods(getFormula)
+exportMethods(getModel)
+exportMethods(getNumberWays)
+exportMethods(getOutcome)
+exportMethods(getPopulation)
+exportMethods(getResponse)
+exportMethods(getThetaHat)
+exportMethods(mr)
+exportMethods(poststratify)
+exportMethods(setFormula)
+exportMethods(setPopulation)
+exportMethods(show)
+exportMethods(spplot)
+exportMethods(xval)
 import(grid)
 import(lattice)
