--- a/mrp/DESCRIPTION
+++ b/mrp/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: mrp
 Version: 1.0
-Date: 2012-05-02
+Date: 2013-09-21
 Title: Multilevel Regression and Poststratification
-Author: Andrew Gelman <gelman@stat.columbia.edu>,
-    Michael Malecki <malecki@wustl.edu>,
-    Jeffrey R. Lax <JRL2124@columbia.edu>
+Author: Michael Malecki <malecki@gmail.com>,
+    Jeffrey R. Lax <JRL2124@columbia.edu>,
+    Andrew Gelman <gelman@stat.columbia.edu>,
     Wei Wang <ww2243@columbia.edu>
 Maintainer: Michael Malecki <malecki@gmail.com>
 Depends:
@@ -20,7 +20,7 @@ Depends:
     reshape2,
     mrpdata
 Suggests:
-    doMC,
+    parallel,
     colorspace
 Description: Multilevel Regressions and Poststratification
 License: GPL (>= 2)
