--- a/mrp/DESCRIPTION
+++ b/mrp/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mrp
-Version: 1.0
-Date: 2013-09-27
+Version: 1.0-1
+Date: 2013-11-09
 Title: Multilevel Regression and Poststratification
 Author: Michael Malecki <malecki@gmail.com>,
     Jeffrey R. Lax <JRL2124@columbia.edu>,
