--- a/mrp/DESCRIPTION
+++ b/mrp/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mrp
-Version: 1.0
-Date: 2013-09-27
+Version: 1.1
+Date: 2014-01-16
 Title: Multilevel Regression and Poststratification
 Author: Michael Malecki <malecki@gmail.com>,
     Jeffrey R. Lax <JRL2124@columbia.edu>,
@@ -8,7 +8,7 @@ Author: Michael Malecki <malecki@gmail.com>,
     Wei Wang <ww2243@columbia.edu>
 Maintainer: Michael Malecki <malecki@gmail.com>
 Depends:
-    R (>= 2.15),
+    R (>= 3.0),
     methods,
     Matrix,
     blme,
@@ -21,9 +21,11 @@ Depends:
     mrpdata
 Suggests:
     parallel,
-    colorspace
+    colorspace,
+    knitr
+VignetteBuilder: knitr
 Description: Multilevel Regressions and Poststratification
-License: GPL (>= 2)
+License: GPL (>= 3)
 LazyLoad: yes
 LazyData: yes
 Collate:
